<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvDialogNameAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name_contact" />

    <EditText
        android:id="@+id/etDialogNameAddContact"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rectangle_shape"
        android:paddingHorizontal="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvDialogNameAddContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/name_example" />

    <TextView
        android:id="@+id/tvDialogNumberAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etDialogNameAddContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/etDialogNumberAddContact"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rectangle_shape"
        android:paddingHorizontal="8dp"
        android:ems="10"
        android:hint="@string/phone_number_example"
        app:layout_constraintTop_toBottomOf="@id/tvDialogNumberAddContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/tvDialogTypeAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/spinnerAddContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinnerAddContact"
        app:layout_constraintBottom_toBottomOf="@id/spinnerAddContact"
        android:text="@string/type" />

    <Spinner
        android:id="@+id/spinnerAddContact"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/etDialogNumberAddContact"
        app:layout_constraintStart_toEndOf="@id/tvDialogTypeAddContact"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:textColor="@color/colorWhite"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button_add"
        app:layout_constraintTop_toBottomOf="@id/spinnerAddContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>