<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDialogNumberAddNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/etDialogNumberAddNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rectangle_shape"
        android:paddingHorizontal="8dp"
        android:ems="10"
        android:hint="@string/phone_number_example"
        app:layout_constraintTop_toBottomOf="@id/tvDialogNumberAddNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/tvDialogTypeAddNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/spinnerAddNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinnerAddNumber"
        app:layout_constraintBottom_toBottomOf="@id/spinnerAddNumber"
        android:text="@string/type" />

    <Spinner
        android:id="@+id/spinnerAddNumber"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/etDialogNumberAddNumber"
        app:layout_constraintStart_toEndOf="@id/tvDialogTypeAddNumber"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonAddNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:textColor="@color/colorWhite"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button_add"
        app:layout_constraintTop_toBottomOf="@id/spinnerAddNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>